[gd_scene load_steps=3 format=3 uid="uid://cnsck6idjw1cl"]

[ext_resource type="Script" uid="uid://cqdwst6kh1kvo" path="res://ui/user_interface.gd" id="1_l3osv"]
[ext_resource type="PackedScene" uid="uid://cmty10gu8bepm" path="res://ui/settings_container.tscn" id="2_adm0t"]

[node name="UserInterface" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_l3osv")

[node name="PauseScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="PauseContainer" type="CenterContainer" parent="PauseScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/PauseContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Pause"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
layout_mode = 2
shortcut_context = NodePath("../..")
text = "resume"

[node name="SettingsButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="SettingsContainer" parent="PauseScreen" instance=ExtResource("2_adm0t")]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 292.0
offset_bottom = 105.0
grow_horizontal = 1
grow_vertical = 1
script = null

[node name="ColorRectFader" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
